# SpaceTradeSimulator

./: Alcohol.cpp  Alcohol.hpp  CMakeLists.txt  Cargo.hpp  Engine.cpp  Engine.hpp  Item.cpp  Item.hpp  README.md  ShipPart.hpp  Spice.cpp  Spice.hpp  Store.cpp  Store.hpp  main.cpp
inc/: Alcohol.hpp  Cargo.hpp  Chains.hpp  DialogManager.hpp  Docks.hpp  Game.hpp  ICargo.hpp  Item.hpp  Planet.hpp  Player.hpp  Ship.hpp  SolarSystem.hpp  Spice.hpp  StockManagement.hpp  Store.hpp  Time.hpp  Validator.hpp
res/: advanced_ship1.txt  basic_ship3.txt  ship2.txt  ship4.txt  ship5.txt
src/: Alcohol.cpp  Chains.cpp  DealContext.cpp  DialogManager.cpp  Docks.cpp  Game.cpp  Item.cpp  Planet.cpp  Player.cpp  Ship.cpp  SolarSystem.cpp  Spice.cpp  StockManagement.cpp  Store.cpp  Time.cpp  Validator.cpp  main.cpp
